# eva-project

./: Makefile  pyproject.toml
backend/: api.py  pyproject.toml  start.sh  telegram.py
config/: .env.dist
config/nginx/: mime.types  nginx.conf
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: Admin.vue  Login.vue  UserStatus.vue
frontend/src/store/: index.js
