[tool.poetry]
name = "eva_project"
version = "0.1.0"
description = ""
authors = ["Vadym Sorokin <nicourrrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
pymongo = "^4.0.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
pyTelegramBotAPI = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
